ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress   
spec:  
  rules:
    - host: pg.geok8s.info
      http:   
        paths:   
          - path: /   
            pathType: Prefix   
            backend:   
              service:   
                name: nginx   
                port:   
                  number: 80
    - host: gs.geok8s.info
      http:   
        paths:   
          - path: /   
            pathType: Prefix   
            backend:   
              service:   
                name: geoserver-svc   
                port:   
                  number: 8080
